@@ -11,6 +11,8 @@ o summary.mjca() gains a similar columns= argument
 
 o Fixed calls to rgl functions in plot3d.ca.r to avoid 'no global binding' warnings.
 
+o Fixed bug in plot.mcja() with dimension percentages for lambda="adjusted"
+
 Version 0.55 (2014-03-09)
 
 o plot.ca() and plot.mjca() now provide sensible default xlab and ylab
